@@ -61,6 +61,8 @@ Release 0.12.1 - unreleased
     S2GRAPH-53: Refactor Storage to decide which serializer/deserializer for IndexEdge/SnapshotEdge/Vertex 
 		(Committed by DOYUNG YOON).
 
+    S2GRAPH-55: Add param to enable epoll event loop in experimental netty http server (Committed by daewon).
+
   BUG FIXES
 
     S2GRAPH-18: Query Option "interval" is Broken. 
